kube/myapp/chart/templates/db_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  labels:
    k8s-app: myapp
    gitlab: sf-summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: app-db
          image: postgres:13-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pg-data-mount
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: pg-data-mount
          persistentVolumeClaim:
            claimName: pg-data-pv-claim
