kube/myapp/chart/templates/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-django
  labels:
    k8s-app: myapp
    gitlab: sf-summary
    app: app
spec:
  type: NodePort
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    app: app
